add gallery section and footer

--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,20 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link
+      rel="icon"
+      href="assets/icons/logo.svg"
+      type="image/svg+xml"
+    />
     <title>НАМУ</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
-    <script
-      src="scripts/main.js"
-      defer
-    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
   </head>
   <body class="body page__body">
     <header class="header">
@@ -76,7 +81,7 @@
             <button
               class="menu__icon menu__icon--inside icon icon--close"
             ></button>
-            <ul class="menu__nav-list nav__list">
+            <ul class="menu__nav-list nav__list nav__list--menu">
               <li class="nav__item">
                 <a
                   href="#gallery"
@@ -91,22 +96,22 @@
                   href="#events"
                   class="nav__link"
                 >
-                  Виставки та події
+                  Виставки&nbsp;та події
                 </a>
               </li>
 
               <li class="nav__item">
                 <a
-                  href="#"
+                  href="#about-us"
                   class="nav__link"
                 >
-                  Про Нас
+                  Про&nbsp;Нас
                 </a>
               </li>
 
               <li class="nav__item">
                 <a
-                  href="#"
+                  href="#contacts"
                   class="nav__link"
                 >
                   Контакти
@@ -118,13 +123,13 @@
           <div class="d-line menu__d-line"></div>
 
           <div class="menu__schedule">
-            <section class="schedule">
-              <p class="schedule__title">Графік роботи</p>
+            <section class="table">
+              <p class="table__title">Графік роботи</p>
 
-              <div class="schedule__content">
-                <ul class="schedule__hours">
-                  <li class="schedule__item">
-                    <p class="schedule__hour">
+              <div class="table__content table__content--menu">
+                <ul class="table__hours">
+                  <li class="table__item">
+                    <p class="table__hour">
                       <span class="bold-text">12:00 — 20:00</span>
                       середа
                     </p>
@@ -159,7 +164,7 @@
                   </li>
                 </ul>
 
-                <p class="schedule__extra-info">
+                <p class="table__extra-info">
                   <span class="bold-text">Вихідні:</span>
                   понеділок, вівторок
                   <br />
@@ -172,13 +177,13 @@
       </aside>
     </div>
 
-    <main class="main">
+    <main class="page__main main">
       <section
         class="main__section events"
         id="events"
       >
         <div class="events__container">
-          <h2 class="events__title">Актуальні події</h2>
+          <h2 class="events__title main__section-title">Актуальні події</h2>
 
           <div class="events__content">
             <article class="events__exhibition exhibition">
@@ -288,10 +293,284 @@
         class="main__section gallery"
         id="gallery"
       >
-        <h2 class="gallery__title">Галерея</h2>
+        <h2 class="gallery__title main__section-title">Галерея</h2>
+
+        <div class="gallery-grid gallery__grid">
+          <div class="gallery-grid__cell gallery-grid__cell--narrow">
+            <img
+              src="assets/images/gallery/gallery-art-1-big.png"
+              alt="Наречена"
+              class="gallery-grid__image"
+            />
+          </div>
+
+          <div class="gallery-grid__cell gallery-grid__cell--wide">
+            <img
+              src="assets/images/gallery/gallery-art-2-big.png"
+              alt="Село зимою. Глухонь"
+              class="gallery-grid__image"
+            />
+          </div>
+
+          <div class="gallery-grid__cell gallery-grid__cell--wide">
+            <img
+              src="assets/images/gallery/gallery-art-3-big.png"
+              alt="Сонячний день"
+              class="gallery-grid__image"
+            />
+          </div>
+
+          <div class="gallery-grid__cell gallery-grid__cell--narrow">
+            <img
+              src="assets/images/gallery/gallery-art-4-big.png"
+              alt="На морі"
+              class="gallery-grid__image"
+            />
+          </div>
+        </div>
+
+        <div class="gallery__image-slider">
+          <div class="image-slider swiper">
+            <div class="image-slider__wrapper swiper-wrapper">
+              <div
+                class="image-slider__slide swiper-slide image-slider__slide--narrow"
+              >
+                <div class="image-slider__image-wrapper">
+                  <img
+                    src="assets/images/gallery/gallery-art-1-big.png"
+                    alt="Наречена"
+                    class="image-slider__image"
+                  />
+                </div>
+              </div>
+              <div
+                class="image-slider__slide swiper-slide image-slider__slide--narrow"
+              >
+                <div class="image-slider__image-wrapper">
+                  <img
+                    src="assets/images/gallery/gallery-art-5-medium.png"
+                    alt="Гуси"
+                    class="image-slider__image"
+                  />
+                </div>
+              </div>
+              <div
+                class="image-slider__slide swiper-slide image-slider__slide--narrow"
+              >
+                <div class="image-slider__image-wrapper">
+                  <img
+                    src="assets/images/gallery/gallery-art-2-big.png"
+                    alt="Село зимою. Глухонь"
+                    class="image-slider__image"
+                  />
+                </div>
+              </div>
+              <div
+                class="swiper-slide image-slider__slide image-slider__slide--narrow"
+              >
+                <div class="image-slider__image-wrapper">
+                  <img
+                    src="assets/images/gallery/gallery-art-4-big.png"
+                    alt="На морі"
+                    class="image-slider__image"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="gallery__pagination-wrapper">
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <div
+        class="footer__hero"
+        id="about-us"
+      >
+        <div class="hero">
+          <div class="hero__content">
+            <h2 class="hero__title">Підписка</h2>
+            <p class="hero__motto">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form class="hero__input">
+              <input
+                type="email"
+                class="hero__field"
+                placeholder="E-mail"
+                name="email"
+              />
+              <button
+                class="hero__btn box box--secondary"
+                type="submit"
+              ></button>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <div
+        class="footer__content"
+        id="contacts"
+      >
+        <div class="footer__icons">
+          <a
+            href="#"
+            class="footer__logo logo logo--left"
+          >
+            <img
+              class="logo__img logo__img--big"
+              src="assets/icons/logo.svg"
+              alt="Логотип NAMU"
+            />
+          </a>
+
+          <div class="footer__social-media">
+            <a
+              href="https://www.facebook.com/namu.museum"
+              class="icon icon--facebook"
+              target="_blank"
+            ></a>
+            <a
+              href="https://www.instagram.com/namu.museum"
+              class="footer__instagram icon icon--instagram"
+              target="_blank"
+            ></a>
+          </div>
+        </div>
+
+        <div class="footer__schedule">
+          <section class="table">
+            <p class="table__title">Графік роботи</p>
+
+            <div class="table__content table__content--footer">
+              <ul class="table__hours">
+                <li class="table__item">
+                  <p class="table__hour">
+                    <span class="bold-text">12:00 — 20:00</span>
+                    середа
+                  </p>
+                </li>
+
+                <li>
+                  <p>
+                    <span class="bold-text">12:00 — 20:00</span>
+                    четвер
+                  </p>
+                </li>
+
+                <li>
+                  <p>
+                    <span class="bold-text">12:00 — 20:00</span>
+                    п’ятниця
+                  </p>
+                </li>
+
+                <li>
+                  <p>
+                    <span class="bold-text">11:00 — 19:00</span>
+                    субота
+                  </p>
+                </li>
+
+                <li>
+                  <p>
+                    <span class="bold-text">11:00 — 19:00</span>
+                    неділя
+                  </p>
+                </li>
+              </ul>
+
+              <p class="table__extra-info">
+                <span class="bold-text">Вихідні:</span>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину
+                <span class="no-wrap">до закриття музею</span>
+              </p>
+            </div>
+          </section>
+        </div>
+
+        <div class="footer__contacts">
+          <section class="table">
+            <p class="table__title">Контакти</p>
+
+            <div class="table__content">
+              <p class="table__extra-info">
+                вул. М. Грушевського, 6; Київ, 01001
+                <br />
+                тел. +38 (044)
+                <span class="no-wrap">278-13-57</span>
+                <br />
+                факс +38 (044)
+                <span class="no-wrap">278-74-54</span>
+                <br />
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+          </section>
+
+          <a
+            href="#"
+            class="footer__to-top"
+          ></a>
+        </div>
+
+        <div class="footer__d-line d-line d-line--horizontal"></div>
+
+        <nav class="footer__nav nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                href="#gallery"
+                class="nav__link"
+              >
+                Галерея
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#events"
+                class="nav__link"
+              >
+                Виставки та події
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#about-us"
+                class="nav__link"
+              >
+                Про Нас
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a
+                href="#contacts"
+                class="nav__link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="footer__legal">
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+          <p class="footer__copyright">Designed by Zhyriada Marina</p>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
