add interacton styles

--- a/src/index.html
+++ b/src/index.html
@@ -385,6 +385,11 @@
       </section>
     </main>
 
+    <a
+      href="#"
+      class="page__to-top"
+    ></a>
+
     <footer class="footer">
       <div
         class="footer__hero"
@@ -396,16 +401,21 @@
             <p class="hero__motto">
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
-            <form class="hero__input">
+            <form
+              class="hero__input"
+              name="reg"
+            >
               <input
                 type="email"
                 class="hero__field"
                 placeholder="E-mail"
                 name="email"
+                required
               />
               <button
                 class="hero__btn box box--secondary"
                 type="submit"
+                name="submit"
               ></button>
             </form>
           </div>
@@ -501,23 +511,42 @@
 
             <div class="table__content">
               <p class="table__extra-info">
-                вул. М. Грушевського, 6; Київ, 01001
+                <a
+                  href="https://maps.app.goo.gl/AsaixqT342415iBMA"
+                  class="footer__contact"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
                 <br />
-                тел. +38 (044)
-                <span class="no-wrap">278-13-57</span>
+                тел.
+                <a
+                  href="tel:+380442781357"
+                  class="footer__contact"
+                >
+                  +38 (044)
+                  <span class="no-wrap">278-13-57</span>
+                </a>
                 <br />
-                факс +38 (044)
-                <span class="no-wrap">278-74-54</span>
+                факс
+                <a
+                  href="tel:+380442787454"
+                  class="footer__contact"
+                >
+                  +38 (044)
+                  <span class="no-wrap">278-74-54</span>
+                </a>
                 <br />
-                e-mail: info@namu.kiev.ua
+                e-mail:
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="footer__contact"
+                >
+                  info@namu.kiev.ua
+                </a>
               </p>
             </div>
           </section>
-
-          <a
-            href="#"
-            class="footer__to-top"
-          ></a>
         </div>
 
         <div class="footer__d-line d-line d-line--horizontal"></div>
