--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,24 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      href="./images/logo.svg"
+      type="image/png"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- <script src="scripts/main.js"></script> -->
@@ -46,7 +59,7 @@
         <div class="art-museum-title-and-link">
           <p class="art-museum-title">ХУДОЖНІЙ МУЗЕЙ</p>
 
-          <a href="#" class="art-museum-link">
+          <a href="#actual-events" class="art-museum-link">
             <img
               src="./images/tickets-image.png"
               alt="tickets-image"
@@ -54,57 +67,66 @@
             >
           </a>
         </div>
+
+        <div class="art-museum-events">
+          <div class="art-museum-events-text">ПОДІЇ</div>
+          <div class="art-museum-events-line"></div>
+        </div>
       </div>
-
-
     </header>
 
     <aside class="aside" id="menu">
       <div class="container">
-        <div class="aside-top-bar">
-          <a href="#" class="aside-top-bar-link">
-            <img
-              src="./images/icon-close-aside.png"
-              alt="icon-close"
-              class="aside-top-bar-link-icon"
-            >
-          </a>
+        <div class="aside-container-for-grid">
+          <div class="aside-top-bar">
+            <a href="#" class="aside-top-bar-link">
+              <img
+                src="./images/icon-close-aside.png"
+                alt="icon-close"
+                class="aside-top-bar-link-icon"
+              >
+            </a>
 
-          <nav class="aside-top-bar-nav">
-            <ul class="aside-top-bar-nav-list aside-top-bar-nav-left">
-              <li class="aside-top-bar-nav-item">
-                <a href="#" class="aside-top-bar-nav-link">Галерея</a>
-              </li>
+            <nav class="aside-top-bar-nav">
+              <ul class="aside-top-bar-nav-list aside-top-bar-nav-left">
+                <li class="aside-top-bar-nav-item">
+                  <a href="#gallery" class="aside-top-bar-nav-link">Галерея</a>
+                </li>
 
-              <li class="aside-top-bar-nav-item">
-                <a href="#" class="aside-top-bar-nav-link">Виставки та події</a>
-              </li>
-            </ul>
+                <li class="aside-top-bar-nav-item">
+                  <a href="#actual-events" class="aside-top-bar-nav-link">Виставки та події</a>
+                </li>
+              </ul>
 
-            <ul class="aside-top-bar-nav-list aside-top-bar-nav-right">
-              <li class="aaside-top-bar-nav-item">
-                <a href="#" class="aside-top-bar-nav-link">Про Нас</a>
-              </li>
+              <ul class="aside-top-bar-nav-list aside-top-bar-nav-right">
+                <li class="aaside-top-bar-nav-item">
+                  <a href="#about-us" class="aside-top-bar-nav-link">Про Нас</a>
+                </li>
 
-              <li class="aside-top-bar-nav-item">
-                <a href="#" class="aside-top-bar-nav-link">Контакти</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+                <li class="aside-top-bar-nav-item">
+                  <a href="#footer" class="aside-top-bar-nav-link">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
 
-        <div class="aside-schedule">
-          <p class="aside-schedule-title">Графік роботи</p>
-          <p class="aside-schedule-description">
-            <strong>12:00 — 20:00</strong> середа<br>
-            <strong>12:00 — 20:00</strong> четвер<br>
-            <strong>12:00 — 20:00</strong> п’ятниця<br>
-            <strong>11:00 — 19:00</strong> субота<br>
-            <strong>11:00 — 19:00</strong> неділя<br><br>
+          <div class="aside-schedule">
+            <p class="aside-schedule-title">Графік роботи</p>
+            <div class="aside-schedule-time-and-description">
+              <p class="aside-schedule-time">
+                <strong>12:00 — 20:00</strong> середа<br>
+                <strong>12:00 — 20:00</strong> четвер<br>
+                <strong>12:00 — 20:00</strong> п’ятниця<br>
+                <strong>11:00 — 19:00</strong> субота<br>
+                <strong>11:00 — 19:00</strong> неділя<br><br>
+              </p>
 
-            Вихідні понеділок, вівторок<br>
-            Каса припиняє роботу за 1 годину до закриття музею
-          </p>
+              <p class="aside-schedule-description">
+                Вихідні понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </aside>
@@ -112,65 +134,72 @@
     <div class="overlay"></div>
 
     <main class="main">
-      <section class="actual-events">
+      <section class="actual-events" id="actual-events">
         <div class="container">
           <p class="actual-events-title">Актуальні події</p>
 
-          <a href="#" class="actual-events-first-link">
-            <img
-              src="./images/actual-events-1-photo.png"
-              alt="actual-events-1-photo"
-              class="actual-events-first-link-photo"
-            >
-          </a>
-
-          <div class="actual-events-container-for-dates">
-            <p class="actual-events-container-for-dates-title">ВИСТАВКА</p>
-
-            <p class="actual-events-container-for-dates-date">26.08-29.11.2019</p>
-          </div>
-
-          <div class="actual-events-container-for-nameandsquare">
-            <p class="actual-events-container-for-nameandsquare-name">Йду i повертаюсь</p>
-
-            <a href="#" class="actual-events-container-for-nameandsquare-link">
+          <div class="actual-events-container-for-grid">
+            <a href="#" class="actual-events-first-link">
               <img
-                src="./images/red-square.png"
-                alt="square"
-                class="actual-events-container-for-nameandsquare-link-square"
+                src="./images/actual-events-1-photo.png"
+                alt="actual-events-1-photo"
+                class="actual-events-first-link-photo"
               >
             </a>
-          </div>
 
-          <p class="actual-events-description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            <div class="actual-events-first-block">
+              <div class="actual-events-container-for-dates">
+                <p class="actual-events-container-for-dates-title">ВИСТАВКА</p>
 
-          <a href="#" class="actual-events-second-link">
-            <img
-              src="./images/actual-events-2-photo.png"
-              alt="actual-events-1-photo"
-              class="actual-events-second-link-photo"
-            >
-          </a>
+                <p class="actual-events-container-for-dates-date">26.08-29.11.2019</p>
+              </div>
 
-          <div class="actual-events-container-for-dates">
-            <p class="actual-events-container-for-dates-title">ВИСТАВКА</p>
+              <div class="actual-events-container-for-nameandsquare">
+                <p class="actual-events-container-for-nameandsquare-name">Йду i повертаюсь</p>
 
-            <p class="actual-events-container-for-dates-date">26.08-29.11.2019</p>
-          </div>
+                <a href="#" class="actual-events-container-for-nameandsquare-link">
+                  <img
+                    src="./images/red-square.png"
+                    alt="square"
+                    class="actual-events-container-for-nameandsquare-link-square"
+                  >
+                </a>
+              </div>
 
-          <div class="actual-events-container-for-nameandsquare">
-            <p class="actual-events-container-for-nameandsquare-name">І спогади і мрії</p>
+              <p class="actual-events-description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
 
-            <a href="#" class="actual-events-container-for-nameandsquare-link">
+
+            <a href="#" class="actual-events-second-link">
               <img
-                src="./images/red-square.png"
-                alt="square"
-                class="actual-events-container-for-nameandsquare-link-square"
-              >
+                src="./images/actual-events-2-photo.png"
+                alt="actual-events-1-photo"
+                class="actual-events-second-link-photo"
+                >
             </a>
-          </div>
 
-          <p class="actual-events-description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            <div class="actual-events-second-block">
+              <div class="actual-events-container-for-dates">
+                <p class="actual-events-container-for-dates-title">ВИСТАВКА</p>
+
+                <p class="actual-events-container-for-dates-date">26.08-29.11.2019</p>
+              </div>
+
+              <div class="actual-events-container-for-nameandsquare actual-events-container-for-nameandsquare-second">
+                <p class="actual-events-container-for-nameandsquare-name">І спогади і мрії</p>
+
+                <a href="#" class="actual-events-container-for-nameandsquare-link">
+                  <img
+                    src="./images/red-square.png"
+                    alt="square"
+                    class="actual-events-container-for-nameandsquare-link-square"
+                  >
+                </a>
+              </div>
+
+              <p class="actual-events-description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+          </div>
         </div>
 
         <a href="#" class="actual-events-third-link">
@@ -192,18 +221,52 @@
         </a>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="container">
           <p class="gallery-title">Галерея</p>
 
-          <a href="#" class="gallery-link">
-            <img
-              src="./images/gallery-first-photo.png"
-              alt="gallery-photo"
-              class="gallery-link-photo"
-            >
-          </a>
+          <div class="gallery-container-for-display-grid">
+            <a href="#" class="gallery-first-link">
+              <img
+                src="./images/gallery-first-photo.png"
+                alt="gallery-photo"
+                class="gallery-first-link-photo"
+              >
+            </a>
 
+            <a href="#" class="gallery-second-link">
+              <img
+                src="./images/gallery-second-photo.png"
+                alt="gallery-photo"
+                class="gallery-second-link-photo"
+              >
+            </a>
+
+            <a href="#" class="gallery-third-link">
+              <img
+                src="./images/gallery-photo-three.png"
+                alt="gallery-photo"
+                class="gallery-third-link-photo"
+              >
+            </a>
+
+            <a href="#" class="gallery-fourth-link">
+              <img
+                src="./images/gallery-photo-four.png"
+                alt="gallery-photo"
+                class="gallery-fourth-link-photo"
+              >
+            </a>
+
+            <a href="#" class="gallery-fifth-link">
+              <img
+                src="./images/gallery-photo-five.png"
+                alt="gallery-photo"
+                class="gallery-fifth-link-photo"
+              >
+            </a>
+
+          </div>
           <a href="#" class="gallery-points-link">
             <img
               src="./images/points.png"
@@ -214,7 +277,7 @@
         </div>
       </section>
 
-      <section class="sign-up">
+      <section class="sign-up" id="about-us">
         <a href="#" class="sign-up-link">
           <img
             src="./images/sign-up-link-photo.png"
@@ -256,37 +319,47 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="container">
-        <div class="footer-logos">
-          <a href="#" class="footer-logo">
-            <img
-              src="./images/logo.svg"
-              alt="logo"
-              class="footer-logo-icon"
-            >
-          </a>
-
-          <div class="footer-socials">
-            <a href="#" class="footer-socials-facebook">
+        <div class="footer-container-for-display-grid">
+          <div class="footer-logos">
+            <a href="#" class="footer-logo">
               <img
-                src="./images/facebook-logo.png"
-                alt="facebook"
-                class="footer-socials-facebook-logo"
+                src="./images/logo.svg"
+                alt="logo"
+                class="footer-logo-icon"
               >
             </a>
 
-            <a href="#" class="footer-socials-instagram">
-              <img
-                src="./images/instagram-logo.png"
-                alt="instagram"
-                class="footer-socials-instagram-logo"
+            <div class="footer-socials">
+              <a
+                href="https://www.facebook.com"
+                class="footer-socials-facebook"
+                target="_blank"
+                rel="noopener noreferrer"
               >
-            </a>
+                <img
+                  src="./images/facebook-logo.png"
+                  alt="facebook"
+                  class="footer-socials-facebook-logo"
+                >
+              </a>
+
+              <a
+                href="https://www.instagram.com"
+                class="footer-socials-instagram"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img
+                  src="./images/instagram-logo.png"
+                  alt="instagram"
+                  class="footer-socials-instagram-logo"
+                >
+              </a>
+            </div>
           </div>
-        </div>
 
-        <div class="footer-schedule-and-contacts">
           <div class="footer-schedule">
             <p class="footer-schedule-title">Графік роботи</p>
             <p class="footer-schedule-description">
@@ -311,29 +384,43 @@
               e-mail: info@namu.kiev.ua
             </p>
           </div>
+
+          <a href="#" class="footer-circle-with-arrow">
+            <img
+            src="./images/arrow-image-svg.svg"
+            alt="arrow"
+            class="footer-circle-with-arrow-image"
+            >
+          </a>
+
+          <div class="footer-border-bottom"></div>
+
+          <nav class="footer-nav footer-nav-left">
+            <ul class="footer-nav-list">
+              <li class="footer-nav-item">
+                <a href="#gallery" class="footer-nav-link">Галерея</a>
+              </li>
+
+              <li class="footer-nav-item">
+                <a href="#actual-events" class="footer-nav-link">Виставки та події</a>
+              </li>
+            </ul>
+          </nav>
+
+          <nav class="footer-nav footer-nav-right">
+            <ul class="footer-nav-list">
+              <li class="footer-nav-item">
+                <a href="#about-us" class="footer-nav-link">Про Нас</a>
+              </li>
+
+              <li class="footer-nav-item">
+                <a href="#about-us" class="footer-nav-link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
         </div>
 
-        <nav class="footer-nav">
-          <ul class="footer-nav-list footer-nav-left">
-            <li class="footer-nav-item">
-              <a href="#" class="footer-nav-link">Галерея</a>
-            </li>
 
-            <li class="footer-nav-item">
-              <a href="#" class="footer-nav-link">Виставки та події</a>
-            </li>
-          </ul>
-
-          <ul class="footer-nav-list footer-nav-right">
-            <li class="footer-nav-item">
-              <a href="#" class="footer-nav-link">Про Нас</a>
-            </li>
-
-            <li class="footer-nav-item">
-              <a href="#" class="footer-nav-link">Контакти</a>
-            </li>
-          </ul>
-        </nav>
 
         <div class="footer-bottom-block">
           <p class="footer-bottom-block-design">Designed by Zhyriada Marina</p>
