--- a/src/index.html
+++ b/src/index.html
@@ -308,21 +308,20 @@
                     <a
                       href="tel:+38(044)2781357"
                       class="contacts__link"
-                      target="_blank"
                     >
                       тел. +38 (044) 278-13-57
                     </a>
                     <a
                       href="tel:+38(044)2787454"
                       class="contacts__link"
-                      target="_blank">
-                        факс +38 (044) 278-74-54
+                    >
+                      факс +38 (044) 278-74-54
                     </a>
                     <a
                       href="mailto:info@namu.kiev.ua"
                       class="contacts__link"
-                      target="_blank">
-                        e-mail: info@namu.kiev.ua
+                    >
+                      e-mail: info@namu.kiev.ua
                     </a>
                   </div>
                 </div>
@@ -331,7 +330,7 @@
               <div class="footer__line"></div>
 
               <div class="footer__menu">
-                <ul class="nav footer__nav">
+                <ul class="nav nav--for-footer footer__nav">
                   <li class="nav__item nav__item--for-footer nav__item--first">
                     <a href="#gallery" class="nav__link nav__link--for-footer">Галерея</a>
                   </li>
@@ -339,7 +338,7 @@
                     <a href="#subscription" class="nav__link nav__link--for-footer">Про Нас</a>
                   </li>
                   <li class="nav__item nav__item--for-footer nav__item--third">
-                    <a href="#events" class="nav__link nav__link--for-footer">Виставки та <br>події</a>
+                    <a href="#events" class="nav__link nav__link--for-footer">Виставки та події</a>
                   </li>
                   <li class="nav__item nav__item--for-footer nav__item--fourth">
                     <a href="#footer" class="nav__link nav__link--for-footer">Контакти</a>
