--- a/src/index.html
+++ b/src/index.html
@@ -304,7 +304,13 @@
                 <div class="footer__contacts contacts">
                   <h2 class="contacts__title">Контакти</h2>
                   <div class="contacts__links">
-                    <a href="https://maps.app.goo.gl/aDxzCYSiAPJ6DKmD6" class="contacts__link">вул. М. Грушевського, 6; Київ, 01001</a>
+                    <a
+                      href="https://maps.app.goo.gl/aDxzCYSiAPJ6DKmD6"
+                      class="contacts__link"
+                      target="_blank"
+                    >
+                      вул. М. Грушевського, 6; Київ, 01001
+                    </a>
                     <a
                       href="tel:+38(044)2781357"
                       class="contacts__link"
