--- a/src/index.html
+++ b/src/index.html
@@ -47,12 +47,29 @@
     <header class="header">
       <div class="container">
         <div class="header__content">
-          <div class="header__top">
+          <div class="top-bar header__top">
             <a
               href="#menu"
               class="icon header__menu"
             ></a>
           </div>
+        </div>
+        <h1 class="header__title">
+          ХУДОЖНІЙ
+          <br />
+          МУЗЕЙ
+        </h1>
+        <div class="header__bottom">
+          <p class="header__section-title">ПОДІЇ</p>
+          <a
+            class="header__button button"
+            href="#"
+          >
+            <div class="button__text-block">
+              <p class="button__text">КВИТКИ</p>
+            </div>
+            <div class="button__arrow"></div>
+          </a>
         </div>
       </div>
       <div class="header__bg-container">
@@ -77,54 +94,89 @@
       class="menu page__menu"
       id="menu"
     >
-      <div class="container">
-        <div class="menu__content">
-          <div class="menu__page_layout">
-            <a
-              href="#"
-              class="icon menu__close"
-            ></a>
-            <nav class="menu__nav">
-              <ul class="menu__list">
-                <li class="menu__item">
-                  <a
-                    href="#"
-                    class="menu__link"
-                  >
-                    Галерея
-                  </a>
-                </li>
-                <li class="menu__item">
-                  <a
-                    href="#"
-                    class="menu__link"
-                  >
-                    Про Нас
-                  </a>
-                </li>
-                <br />
-                <li class="menu__item">
-                  <a
-                    href="#"
-                    class="menu__link"
-                  >
-                    Виставки та події
-                  </a>
-                </li>
-                <li class="menu__item">
-                  <a
-                    href="#"
-                    class="menu__link"
-                  >
-                    Контакти
-                  </a>
-                </li>
-              </ul>
-            </nav>
+      <div class="menu__content">
+        <div class="container">
+          <div class="top-bar">
+            <div class="menu__page-links">
+              <a
+                href="#"
+                class="icon menu__close"
+              ></a>
+              <div class="menu__nav">
+                <nav class="nav">
+                  <ul class="nav__list">
+                    <li class="nav__item">
+                      <a
+                        href="#"
+                        class="nav__link"
+                      >
+                        Галерея
+                      </a>
+                    </li>
+                    <li class="nav__item">
+                      <a
+                        href="#"
+                        class="nav__link"
+                      >
+                        Виставки та події
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+                <nav class="nav">
+                  <ul class="nav__list">
+                    <li class="nav__item">
+                      <a
+                        href="#"
+                        class="nav__link"
+                      >
+                        Про Нас
+                      </a>
+                    </li>
+                    <li class="nav__item">
+                      <a
+                        href="#"
+                        class="nav__link"
+                      >
+                        Контакти
+                      </a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+            <div class="menu__schedule">
+              <p class="menu__schedule-title">Графік роботи</p>
+              <div class="menu__schedule-content">
+                <p class="menu__workdays">
+                  12:00 — 20:00
+                  <span class="menu__span">середа</span>
+                  <br />
+                  12:00 — 20:00
+                  <span class="menu__span">четвер</span>
+                  <br />
+                  12:00 — 20:00
+                  <span class="menu__span">п’ятниця</span>
+                  <br />
+                  11:00 — 19:00
+                  <span class="menu__span">субота</span>
+                  <br />
+                  11:00 — 19:00
+                  <span class="menu__span">неділя</span>
+                </p>
+                <p class="menu__offdays">
+                  Вихідні:
+                  <span class="menu__span">
+                    понеділок, вівторок Каса припиняє роботу за 1 годину до
+                    закриття музею
+                  </span>
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="menu__schedule"></div>
         </div>
       </div>
+      <div class="menu__bg"></div>
     </aside>
     <body></body>
     <footer></footer>
