--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,429 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="uk"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>National Art Museum</title>
+    <meta
+      name="description"
+      content="Discover exhibitions, events, and the latest news from the National Art Museum of Ukraine."
+    />
+
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/favicon.svg"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <header
+      class="header"
+      role="banner"
+    >
+      <a
+        href="#menu"
+        class="header__burger"
+        aria-label="Open menu"
+      ></a>
+      <div class="header__hero-img">
+        <a
+          href="#"
+          class="header__logo"
+          aria-label="Home"
+        >
+          NA
+          <br />
+          MU
+        </a>
+      </div>
+      <section class="museum">
+        <h1 class="museum__title">Художній Музей</h1>
+        <div class="museum__button">
+          <p class="museum__event-label">Події</p>
+          <a
+            href="#events"
+            class="button"
+            aria-labelledby="museum__event-label"
+          >
+            <div class="button__title">Квитки</div>
+            <div
+              class="button__arrow-block"
+              aria-hidden="true"
+            ></div>
+          </a>
+        </div>
+      </section>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+      role="navigation"
+      aria-label="Main menu"
+    >
+      <div class="container">
+        <div class="menu__wrapper">
+          <a
+            href="#"
+            class="menu__close"
+            aria-label="Close menu"
+          ></a>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item"><a href="#gallery">Галерея</a></li>
+              <li class="nav__item"><a href="#about">Про Нас</a></li>
+              <li class="nav__item"><a href="#events">Виставки та події</a></li>
+              <li class="nav__item"><a href="#contacts">Контакти</a></li>
+            </ul>
+          </nav>
+          <section class="schedule">
+            <h2 class="schedule__title">Графік роботи</h2>
+            <div class="schedule__wrapper">
+              <ul class="schedule__list">
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span>
+                  Середа
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span>
+                  Четвер
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">12:00 — 20:00</span>
+                  П'ятниця
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">11:00 — 19:00</span>
+                  Субота
+                </li>
+                <li class="schedule__item">
+                  <span class="schedule__time">11:00 — 19:00</span>
+                  Неділя
+                </li>
+              </ul>
+              <p class="schedule__weekends">
+                <span class="schedule__weekend">Вихідні:</span>
+                Понеділок, Вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею.
+              </p>
+            </div>
+          </section>
+        </div>
+      </div>
+      <div class="menu__transparent"></div>
+    </aside>
+
+    <main
+      class="main"
+      role="main"
+    >
+      <section
+        class="events"
+        id="events"
+      >
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+          <article class="events__event">
+            <img
+              src="./images/events/events-1.png"
+              alt="Exhibition 'Go and Comeback'"
+              class="events__image"
+            />
+            <div class="events__desc-wrapper">
+              <p class="events__date">
+                <span class="events__type">Виставка</span>
+                <span class="events__term">26.08-29.11.2019</span>
+              </p>
+              <h3 class="events__name">Йду і повертаюсь</h3>
+              <p class="events__description">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </article>
+
+          <article class="events__event">
+            <img
+              src="./images/events/events-2.png"
+              alt="Exhibition 'Memories and Dreams'"
+              class="events__image"
+            />
+            <div class="events__desc-wrapper">
+              <p class="events__date">
+                <span class="events__type">Виставка</span>
+                <span class="events__term">26.08-29.11.2019</span>
+              </p>
+              <h3 class="events__name">І спогади і мрії</h3>
+              <p class="events__description">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="lecture">
+        <div class="lecture__background"></div>
+        <div class="container">
+          <div class="lecture__wrapper">
+            <p class="lecture__date">
+              <span class="lecture__type">Лекція</span>
+              <span class="lecture__term">26/08/2019 - 11:00</span>
+            </p>
+            <h3 class="lecture__title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__slider">
+            <div class="gallery__items">
+              <img
+                src="./images/gallery/gallery-1.png"
+                alt="Gallery Image 1"
+                class="gallery__item"
+              />
+              <img
+                src="./images/gallery/gallery-2.png"
+                alt="Gallery Image 2"
+                class="gallery__item"
+              />
+              <img
+                src="./images/gallery/gallery-3.png"
+                alt="Gallery Image 3"
+                class="gallery__item"
+              />
+              <img
+                src="./images/gallery/gallery-4.png"
+                alt="Gallery Image 4"
+                class="gallery__item"
+              />
+            </div>
+            <div class="gallery__pagination"></div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="subscribe"
+        id="subscribe"
+      >
+        <div class="container">
+          <h2 class="subscribe__title">Підписка</h2>
+          <p class="subscribe__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form
+            action="#"
+            class="subscribe__form"
+          >
+            <input
+              type="email"
+              name="email"
+              class="subscribe__input"
+              placeholder="E-mail"
+              required
+              aria-label="Email"
+            />
+            <button
+              type="submit"
+              class="subscribe__button"
+              aria-label="Subscribe"
+            ></button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <a
+      href="#"
+      class="page__to-top"
+    ></a>
+
+    <footer
+      class="footer"
+      role="contentinfo"
+    >
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__first">
+            <a
+              href="#"
+              class="footer__logo"
+              aria-label="Home"
+            >
+              NA
+              <br />
+              MU
+            </a>
+            <div class="footer__social-wrapper">
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                class="footer__social footer__social--facebook"
+                target="_blank"
+                aria-label="Facebook"
+              ></a>
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="footer__social footer__social--instagram"
+                target="_blank"
+                aria-label="Instagram"
+              ></a>
+            </div>
+          </div>
+          <div class="footer__second">
+            <nav
+              class="nav nav--footer"
+              aria-label="Footer navigation"
+            >
+              <ul class="nav__list nav__list--footer">
+                <li class="nav__item"><a href="#gallery">Галерея</a></li>
+                <li class="nav__item"><a href="#about">Про Нас</a></li>
+                <li class="nav__item">
+                  <a href="#events">Виставки та події</a>
+                </li>
+                <li class="nav__item"><a href="#contacts">Контакти</a></li>
+              </ul>
+            </nav>
+            <div class="footer__information">
+              <section class="schedule">
+                <h2 class="schedule__title">Графік роботи</h2>
+                <div class="schedule__wrapper schedule__wrapper--footer">
+                  <ul class="schedule__list">
+                    <li class="schedule__item">
+                      <span class="schedule__time">12:00 — 20:00</span>
+                      Середа
+                    </li>
+                    <li class="schedule__item">
+                      <span class="schedule__time">12:00 — 20:00</span>
+                      Четвер
+                    </li>
+                    <li class="schedule__item">
+                      <span class="schedule__time">12:00 — 20:00</span>
+                      П'ятниця
+                    </li>
+                    <li class="schedule__item">
+                      <span class="schedule__time">11:00 — 19:00</span>
+                      Субота
+                    </li>
+                    <li class="schedule__item">
+                      <span class="schedule__time">11:00 — 19:00</span>
+                      Неділя
+                    </li>
+                  </ul>
+                  <p class="schedule__weekends schedule__weekends--footer">
+                    <span class="schedule__weekend">Вихідні:</span>
+                    понеділок,
+                    <br />
+                    вівторок
+                    <br />
+                    Каса припиняє роботу за
+                    <br />
+                    1 годину
+                    <br />
+                    до закриття музею.
+                  </p>
+                </div>
+              </section>
+              <section
+                class="contacts"
+                id="contacts"
+              >
+                <h2 class="contacts__title">Контакти:</h2>
+                <ul class="contacts__list">
+                  <li class="contacts__item">
+                    <a
+                      href="https://maps.app.goo.gl/AsaixqT342415iBMA"
+                      target="_blank"
+                      class="contacts__link"
+                      aria-label="Google Maps link to the museum"
+                    >
+                      вул. М. Грушевського, 6;
+                      <br />
+                      Київ, 01001
+                    </a>
+                  </li>
+                  <li class="contacts__item">
+                    <a
+                      href="tel:+380442781357"
+                      class="contacts__link"
+                      aria-label="Phone number"
+                    >
+                      тел. +38 (044)
+                      <span class="no-wrap">278-13-57</span>
+                    </a>
+                  </li>
+                  <li class="contacts__item">
+                    <a
+                      href="tel:+380442787454"
+                      class="contacts__link"
+                      aria-label="Fax number"
+                    >
+                      факс +38 (044)
+                      <br />
+                      278-74-54
+                    </a>
+                  </li>
+                  <li class="contacts__item">
+                    <a
+                      href="mailto:info@namu.kiev.ua"
+                      class="contacts__link"
+                      aria-label="Email address"
+                    >
+                      e-mail: info@namu.kiev.ua
+                    </a>
+                  </li>
+                </ul>
+              </section>
+            </div>
+          </div>
+        </div>
+        <p class="footer__author-information">
+          <span class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </span>
+          <span class="footer__author">Designed by Zhyriada Marina</span>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
