header almost done

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,95 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+    <header class="header">
+      <div class="container">
+        <div class="header-nav">
+          <a
+            href="#menu"
+            class="icon icon--menu"
+          ></a>
+          <a href="#">
+            <img
+              class="header-logo"
+              src="./images/icons/NA_MU.svg"
+              alt="Museum Logo"
+            />
+          </a>
+        </div>
+      </div>
+
+      <aside
+        class="menu"
+        id="menu"
+      >
+        <div class="container">
+          <div class="menu-bar">
+            <nav class="menu-nav">
+              <div>
+                <a
+                  href="menu"
+                  class="icon icon--close"
+                ></a>
+              </div>
+              <div class="flex">
+                <a
+                  href="#"
+                  class="menu-nav__item menu-nav__gallery"
+                >
+                  Галерея
+                </a>
+                <a
+                  href="#"
+                  class="menu-nav__item"
+                >
+                  Виставки та події
+                </a>
+              </div>
+              <div class="flex">
+                <a
+                  href="#"
+                  class="menu-nav__item menu-nav__about"
+                >
+                  Про Нас
+                </a>
+                <a
+                  href="#"
+                  class="menu-nav__item"
+                >
+                  Контакти
+                </a>
+              </div>
+            </nav>
+          </div>
+
+          <div class="schedule">
+            <p class="schedule-title">Графік роботи</p>
+            <ul class="schedule-list">
+              <li>12:00 — 20:00 середа</li>
+              <li>12:00 — 20:00 четвер</li>
+              <li>12:00 — 20:00 п’ятниця</li>
+              <li>11:00 — 19:00 субота</li>
+              <li>11:00 — 19:00 неділя</li>
+            </ul>
+
+            <p class="schedule-text">
+              Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
+              закриття музею
+            </p>
+          </div>
+        </div>
+      </aside>
+    </header>
+    <main>
+      <section class="museum"></section>
+    </main>
+    <footer></footer>
   </body>
 </html>
