--- a/src/index.html
+++ b/src/index.html
@@ -55,13 +55,13 @@
             </div>
             <div class="flex-aside">
               <a
-                href="#"
+                href="#gallery"
                 class="menu-nav__item menu-nav__gallery"
               >
                 Галерея
               </a>
               <a
-                href="#"
+                href="#events"
                 class="menu-nav__item"
               >
                 Виставки та події
@@ -75,7 +75,7 @@
                 Про Нас
               </a>
               <a
-                href="#"
+                href="#footer"
                 class="menu-nav__item"
               >
                 Контакти
@@ -120,7 +120,10 @@
     </aside>
     <aside></aside>
     <main>
-      <section class="events">
+      <section
+        class="events"
+        id="events"
+      >
         <div class="container">
           <h2 class="events-title">Актуальні події</h2>
           <div class="events-container">
@@ -180,7 +183,72 @@
           </div>
         </div>
       </section>
-      <section class="gallery"><h2 class="gallery-title">Галерея</h2></section>
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <div class="container">
+          <h2 class="gallery-title">Галерея</h2>
+          <div class="grid">
+            <img
+              src="./images/photos/Галерея_1.png"
+              alt=""
+              class="a"
+            />
+            <img
+              src="./images/photos/Галерея_2.png"
+              alt=""
+              class="b"
+            />
+            <img
+              src="./images/photos/Галерея_3.png"
+              alt=""
+              class="c"
+            />
+            <img
+              src="./images/photos/Галерея_4.png"
+              alt=""
+              class="d"
+            />
+          </div>
+        </div>
+        <div class="container">
+          <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper swiper-grid">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img
+                  src="./images/photos/Галерея_1.png"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/photos/Галерея_2.png"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/photos/Галерея_3.png"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/photos/Галерея_4.png"
+                  alt=""
+                />
+              </div>
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need scrollbar -->
+          </div>
+        </div>
+      </section>
       <section class="subcraption">
         <h3 class="subcraption-title">Підписка</h3>
         <p class="subcraption-text">
@@ -201,114 +269,169 @@
         </form>
       </section>
     </main>
-    <footer class="footer">
+    <footer
+      class="footer"
+      id="footer"
+    >
       <div class="container footer_bot">
-        <div class="footer-div1">
-          <a
-            href="#"
-            class="footer-namu"
-          ></a>
-          <div class="flex">
+        <div class="footer-flex2">
+          <div class="footer-div1">
             <a
               href="#"
-              class="footer-face"
+              class="footer-namu"
             ></a>
-            <a
-              href="#"
-              class="footer-insta"
-            ></a>
+            <div class="flex">
+              <a
+                href="#"
+                class="footer-face"
+              ></a>
+              <a
+                href="#"
+                class="footer-insta"
+              ></a>
+            </div>
           </div>
-        </div>
-        <div class="flex">
-          <div class="footer-div2">
-            <p class="footer-schedule">Графік роботи</p>
-            <ul class="footer-list">
-              <li class="footer-list__item">
-                <span class="bold">12:00 — 20:00</span>
-                середа
-              </li>
-              <li class="footer-list__item">
-                <span class="bold">12:00 — 20:00</span>
-                четвер
-              </li>
-              <li class="footer-list__item">
-                <span class="bold">12:00 — 20:00</span>
-                п’ятниця
-              </li>
-              <li class="footer-list__item">
-                <span class="bold">11:00 — 19:00</span>
-                субота
-              </li>
-              <li class="footer-list__item">
-                <span class="bold">11:00 — 19:00</span>
-                неділя
-              </li>
-            </ul>
-            <p class="footer-weekend">
-              Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину до
-              закриття музею
-            </p>
-          </div>
-
-          <div class="footer-div3">
-            <p>Контакти:</p>
-            <ul class="footer-contacts">
-              <li><a href="#">вул. М. Грушевського, 6; Київ, 01001</a></li>
-              <li><a href="#">тел. +38 (044) 278-13-57</a></li>
-              <li><a href="#">факс +38 (044) 278-74-54</a></li>
-              <li><a href="#">e-mail: info@namu.kiev.ua</a></li>
-            </ul>
-          </div>
-          <div class="footer-div4">
-            <nav>
-              <div>
-                <a href="#">Галерея</a>
-                <a href="#">Виставки та події</a>
+          <div>
+            <div class="flex">
+              <div class="footer-div2">
+                <p class="footer-schedule">Графік роботи</p>
+                <ul class="footer-list">
+                  <li class="footer-list__item">
+                    <span class="bold">12:00 — 20:00</span>
+                    середа
+                  </li>
+                  <li class="footer-list__item">
+                    <span class="bold">12:00 — 20:00</span>
+                    четвер
+                  </li>
+                  <li class="footer-list__item">
+                    <span class="bold">12:00 — 20:00</span>
+                    п’ятниця
+                  </li>
+                  <li class="footer-list__item">
+                    <span class="bold">11:00 — 19:00</span>
+                    субота
+                  </li>
+                  <li class="footer-list__item">
+                    <span class="bold">11:00 — 19:00</span>
+                    неділя
+                  </li>
+                </ul>
+                <p class="footer-weekend">
+                  Вихідні: понеділок, вівторок Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
               </div>
 
-              <div>
-                <a href="#">Про Нас</a>
-                <a href="#">Контакти</a>
+              <div class="footer-div3">
+                <p>Контакти:</p>
+                <ul class="footer-contacts">
+                  <li>
+                    <a
+                      href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.449395,30.5307834,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu&g_ep=EgoyMDI0MDgyNy4wIKXMDSoASAFQAw%3D%3D"
+                      class="footer-contacts__link"
+                    >
+                      вул. М. Грушевського, 6; Київ, 01001
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="tel:+38 (044) 278-74-54"
+                      class="footer-contacts__link"
+                    >
+                      тел. +38 (044) 278-13-57
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="tel:+38 (044) 278-74-54"
+                      class="footer-contacts__link"
+                    >
+                      факс +38 (044) 278-74-54
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="mailto:info@namu.kiev.ua"
+                      class="footer-contacts__link"
+                    >
+                      e-mail: info@namu.kiev.ua
+                    </a>
+                  </li>
+                </ul>
               </div>
-            </nav>
-          </div>
-          <a
-            href="#"
-            class="footer-up"
-          ></a>
-        </div>
-        <div>
-          <nav class="footer-nav">
-            <div class="footer-flex">
-              <a
-                href="#"
-                class="footer-link"
-              >
-                Галерея
-              </a>
-              <a
-                href="#"
-                class="footer-link"
-              >
-                Виставки та події
-              </a>
-            </div>
+              <div class="footer-div4">
+                <nav class="flex">
+                  <div class="flex-aside">
+                    <a
+                      href="#gallery"
+                      class="footer-contacts__link"
+                    >
+                      Галерея
+                    </a>
+                    <a
+                      href="#events"
+                      class="footer-contacts__link mt"
+                    >
+                      Виставки та події
+                    </a>
+                  </div>
 
-            <div class="footer-flex footer-flex2">
+                  <div class="footer-new__div flex-aside">
+                    <a
+                      href="#"
+                      class="footer-contacts__link"
+                    >
+                      Про нас
+                    </a>
+                    <a
+                      href="#footer"
+                      class="footer-contacts__link mt"
+                    >
+                      Контакти
+                    </a>
+                  </div>
+                </nav>
+              </div>
               <a
                 href="#"
-                class="footer-link"
-              >
-                Про Нас
-              </a>
-              <a
-                href="#"
-                class="footer-link"
-              >
-                Контакти
-              </a>
+                class="footer-up"
+              ></a>
             </div>
-          </nav>
+            <div>
+              <nav class="footer-nav">
+                <div class="footer-flex">
+                  <a
+                    href="#gallery"
+                    class="footer-link"
+                  >
+                    Галерея
+                  </a>
+                  <a
+                    href="#events"
+                    class="footer-link"
+                  >
+                    Виставки та події
+                  </a>
+                </div>
+
+                <div class="footer-flex footer-flex2">
+                  <a
+                    href="#"
+                    class="footer-link"
+                  >
+                    Про Нас
+                  </a>
+                  <a
+                    href="#footer"
+                    class="footer-link"
+                  >
+                    Контакти
+                  </a>
+                </div>
+              </nav>
+            </div>
+          </div>
         </div>
 
         <div class="footer-person">
@@ -319,5 +442,9 @@
         </div>
       </div>
     </footer>
+    <script
+      src="./js.js"
+      type="module"
+    ></script>
   </body>
 </html>
