--- a/src/index.html
+++ b/src/index.html
@@ -192,22 +192,22 @@
           <div class="grid">
             <img
               src="./images/photos/Галерея_1.png"
-              alt=""
+              alt="Дівчина в українському вбранні"
               class="a"
             />
             <img
               src="./images/photos/Галерея_2.png"
-              alt=""
+              alt="Намальовані будинки зимою"
               class="b"
             />
             <img
               src="./images/photos/Галерея_3.png"
-              alt=""
+              alt="Намальовані люди"
               class="c"
             />
             <img
               src="./images/photos/Галерея_4.png"
-              alt=""
+              alt="Намальована річка"
               class="d"
             />
           </div>
@@ -220,25 +220,25 @@
               <div class="swiper-slide">
                 <img
                   src="./images/photos/Галерея_1.png"
-                  alt=""
+                  alt="Дівчина в українському вбранні"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   src="./images/photos/Галерея_2.png"
-                  alt=""
+                  alt="Намальовані будинки зимою"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   src="./images/photos/Галерея_3.png"
-                  alt=""
+                  alt="Намальовані люди"
                 />
               </div>
               <div class="swiper-slide">
                 <img
                   src="./images/photos/Галерея_4.png"
-                  alt=""
+                  alt="Намальована річка"
                 />
               </div>
             </div>
