--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         ></a>
         <h1 class="header-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
         <a
-          href="#"
+          href="#events"
           class="header-museum__ticket"
         >
           КВИТКИ
@@ -282,11 +282,11 @@
             ></a>
             <div class="flex">
               <a
-                href="#"
+                href="https://www.facebook.com/namu.museum/?locale=ru_RU"
                 class="footer-face"
               ></a>
               <a
-                href="#"
+                href="https://www.instagram.com/namu.museum/"
                 class="footer-insta"
               ></a>
             </div>
