--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,16 @@
     />
     <title>Museum</title>
     <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
