add readme and add hover

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,18 @@
       href="./styles/main.scss"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800,900"
+      href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700"
       rel="stylesheet"
     />
     <link
       href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:regular,500,600,700"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./favicon.ico"
+    >
   </head>
   <body class="page__body">
     <header
